--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "cloudinary": "^2.7.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
+    "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
